@@ -1,5 +1,6 @@
 import { Component, OnInit } from '@angular/core';
 import { CardItemModel } from 'src/app/verticalcards/card-item.model';
+import { Cards1Service } from 'src/app/verticalcards/cards1.service';
 
 @Component({
   selector: 'chegg-add-card',
@@ -8,7 +9,7 @@ import { CardItemModel } from 'src/app/verticalcards/card-item.model';
 })
 export class AddCardComponent implements OnInit {
 
-  constructor() { }
+  constructor(private ps:Cards1Service) { }
 
   ngOnInit(): void {
   }
@@ -16,6 +17,7 @@ export class AddCardComponent implements OnInit {
   addCard(card:CardItemModel) {
     console.log("You presed add Card");
     console.log(card);
+    this.ps.addCard(card);
 
   }
 
